--- a/web/all_products.html
+++ b/web/all_products.html
@@ -29,7 +29,7 @@
         }
         .product-card {
             width: 300px;
-            height: 520px;
+            height: 430px;
             margin: 15px;
         }
         .product-card img {
@@ -74,7 +74,7 @@
                 <option value="Vegetables">Vegetables</option>
                 <option value="Dairy">Dairy</option>
                 <option value="Meat">Meat</option>
-                <option value="Beverages">Beverages</option>
+                <option value="Bakery">Bakery</option>
             </select>
             <select id="price-sort" class="form-select mb-3">
                 <option value="">Sort by Price</option>
@@ -108,6 +108,7 @@
                         <img src="${product.image}" class="card-img-top" alt="${product.name}">
                         <div class="card-body text-center">
                             <h5 class="card-title">${product.name}</h5>
+                            <p class="card-text">${product.description}</p>
                             <p>Price: ${product.price} KZT</p>
                             <button class="btn btn-success w-100" onclick="addToCart('${product.id}', '${product.name}', '${product.price}', '${product.image}')">Add to Cart</button>
                         </div>
