--- a/web/admin.html
+++ b/web/admin.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Пример для home.html -->
     <div class="d-flex flex-column justify-content-center align-items-center text-center text-white vh-100"
-        style="background-image: url('/static/images/home.jpg'); background-size: cover;">
+        style="background-image: url('/images/home.jpg'); background-size: cover;">
         <h2 class="font-weight-bold">Car trading</h2>
         <h1 class="display-4 font-weight-bold" style="text-shadow: 5px 5px 5px rgba(33, 32, 32, 0.51);">Management
             system<br></h1>
